--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -5,8 +5,7 @@ on:
     types: [ published ]
 
 env:
-  IMAGE_REPOSITORY: ghcr.io/gesellix/moby-ryuk
-#  IMAGE_REPOSITORY: testcontainers/ryuk
+  IMAGE_REPOSITORY: testcontainers/ryuk
 
 jobs:
   release-linux:
@@ -21,15 +20,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Login to GHCR
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: go-mod verify
         run: go mod verify
@@ -63,8 +55,7 @@ jobs:
           file: linux/Dockerfile
           platforms: linux/amd64,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x,linux/386,linux/arm/v6
           push: true
-          tags: ${{ env.IMAGE_REPOSITORY }}:${{ inputs.tag_name }}-linux
-#          tags: ${{ env.IMAGE_REPOSITORY }}:${{ github.event.release.tag_name }}-linux
+          tags: ${{ env.IMAGE_REPOSITORY }}:${{ github.event.release.tag_name }}-linux
 
   release-windows:
     strategy:
@@ -75,7 +66,7 @@ jobs:
     runs-on: windows-2022
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v5
         with:
           go-version-file: 'go.mod'
       - run: go version
@@ -83,15 +74,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Login to GHCR
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: go-mod verify
         run: go mod verify
@@ -129,15 +113,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Login to GHCR
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
