--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -129,7 +129,7 @@ jobs:
           tags: |
             type=sha,format=long
           flavor: |
-            suffix=-windows.amd64.${{ matrix.os-version }}
+            suffix=-windows.${{ matrix.os-version }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -213,19 +213,19 @@ jobs:
           linux_manifest=$(docker manifest inspect ${target_image}-linux);
           linux_digests=$(docker manifest inspect ${target_image}-linux | jq -r '.manifests[].digest');
           manifest_list=${linux_digests//sha256:/${target_image%%:*}@sha256:};
-          manifest_list+=" ${target_image}-windows.amd64.ltsc2019";
-          manifest_list+=" ${target_image}-windows.amd64.ltsc2022";
+          manifest_list+=" ${target_image}-windows.ltsc2019";
+          manifest_list+=" ${target_image}-windows.ltsc2022";
           docker manifest create ${target_image} ${manifest_list};
           docker manifest annotate \
               --os-version ${OS_VERSION_ltsc2019} \
               --os windows \
               --arch amd64 \
-              ${target_image} "${target_image}-windows.amd64.ltsc2019";
+              ${target_image} "${target_image}-windows.ltsc2019";
           docker manifest annotate \
               --os-version ${OS_VERSION_ltsc2022} \
               --os windows \
               --arch amd64 \
-              ${target_image} "${target_image}-windows.amd64.ltsc2022";
+              ${target_image} "${target_image}-windows.ltsc2022";
           docker manifest push ${target_image};
 
   build:
